@@ -2,6 +2,7 @@
 - Modified token_store_with_argument_attr to convert signal names passed
   in from the XML separated with underscores to hyphenated strings
   (GTK+ doesn't distinguish between the two, so now we don't).
+- New widget: <spinbutton>.
 
 * Mon Aug 8 2011 Thunor <thunorsif@hotmail.com>
 - Fixed an existing bug in try_set_property, the function that passes
